Regression: Crash on deleting the multi-level hierarchy #106246

Closed
opened 2023-03-28 23:28:07 +02:00 by Carl · 7 comments

System Information
Operating system:MacOS Monterey 12.3.1
Graphics card: M1 Max

Blender Version
Broken: 3.4.1
Worked: 3.3

Short description of error
Deleting a hierarchy crashes blender when there is more than one level of hierarchy.

Exact steps for others to reproduce the error
Make three cubes.

  1. Parent Cube1 to Cube2 (keep transform).
  2. Parent those to Cube3 (keep transform). So there are 3 levels of hierarchy, each with one cube.
  3. Right-click in outliner and select "Delete Hierarchy".
    Blender instantly crashes every time

Workaround: It works to "Select Hierarchy" then choose "Delete". The crash only happens when choosing "Delete Hierarchy"


Here is a testing .blend file with some relatively more complex relationships:

**System Information** Operating system:MacOS Monterey 12.3.1 Graphics card: M1 Max **Blender Version** Broken: 3.4.1 Worked: 3.3 **Short description of error** Deleting a hierarchy crashes blender when there is more than one level of hierarchy. **Exact steps for others to reproduce the error** Make three cubes. 1. Parent Cube1 to Cube2 (keep transform). 2. Parent those to Cube3 (keep transform). So there are 3 levels of hierarchy, each with one cube. 3. Right-click in outliner and select "Delete Hierarchy". Blender instantly crashes every time Workaround: It works to "Select Hierarchy" then choose "Delete". The crash only happens when choosing "Delete Hierarchy" --------------- Here is a testing .blend file with some relatively more complex relationships:
Carl added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-03-28 23:28:08 +02:00
Author

This is still broken in the current next release candidate: blender-3.5.0-candidate+v35.6e51f8d2023a-darwin.arm64-release.dmg

This is still broken in the current next release candidate: blender-3.5.0-candidate+v35.6e51f8d2023a-darwin.arm64-release.dmg
Iliya Katushenock added the
Interest
Core
label 2023-03-29 03:36:03 +02:00
Pratik Borhade removed the
Interest
Core
label 2023-03-29 06:24:02 +02:00
Member

Hi, thanks for the report. I'm not able to redo the crash locally.
Can you share .blend file where this happens. Or can you try out the file I've attached?
(I'm selecting Cube2 and calling the "Delete Hierarchy" operation)

Hi, thanks for the report. I'm not able to redo the crash locally. Can you share .blend file where this happens. Or can you try out the file I've attached? (I'm selecting Cube2 and calling the "Delete Hierarchy" operation)
Pratik Borhade added
Status
Needs Information from User
and removed
Status
Needs Triage
labels 2023-03-29 06:26:04 +02:00
Author

HA that's so weird. Yours deletes fine and I don't see what the difference is. I've attached one that crashes for me.

HA that's so weird. Yours deletes fine and I don't see what the difference is. I've attached one that crashes for me.
Author

Wait...can you try it again, but when you parent both times, use "Keep Transform"

Wait...can you try it again, but when you parent both times, use "Keep Transform"
Member

Can confirm. But crash does not happen on every attempt. I'll check.

Can confirm. But crash does not happen on every attempt. I'll check.
Pratik Borhade added
Module
User Interface
Status
Confirmed
and removed
Status
Needs Information from User
labels 2023-03-29 07:08:26 +02:00
Member

From further testing, this appear as a regression. Will bisect...
Still hit and miss, crash happens sometimes and sometimes not.

Checking for possible solution...

From further testing, this appear as a regression. ~~Will bisect...~~ Still hit and miss, crash happens sometimes and sometimes not. Checking for possible solution...
Pratik Borhade added
Priority
High
and removed
Priority
Normal
labels 2023-03-30 05:29:19 +02:00
Pratik Borhade changed title from Deleting a hierarchy crashes blender when there is more than one level of hierarchy. to Regression: Crash on deleting the multi-level hierarchy 2023-03-30 05:29:51 +02:00
Pratik Borhade self-assigned this 2023-03-30 08:35:55 +02:00
Pratik Borhade removed their assignment 2023-03-30 08:50:47 +02:00
Pratik Borhade self-assigned this 2023-03-30 12:25:44 +02:00

Note that 'recent' changes have merely revealed the underlying issue, problem most likely exists since origin of this feature in 2019...

Note that 'recent' changes have merely revealed the underlying issue, problem most likely exists since origin of this feature in 2019...
Bastien Montagne added
Priority
Normal
and removed
Priority
High
labels 2023-04-12 10:39:24 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-04-12 14:25:55 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#106246
No description provided.